testsuite/tests/typecheck/should_fail/T7734.stderr

T7734.hs:4:13: error:
    • Occurs check: cannot construct the infinite type: r2 ~ r2 -> r1
    • In the first argument of ‘x’, namely ‘x’
      In the expression: x x
    • Relevant bindings include
        x :: r2 -> r1 (bound at T7734.hs:4:1)
        f :: (r2 -> r1) -> r -> r1 (bound at T7734.hs:4:1)

T7734.hs:5:13: error:
    • Occurs check: cannot construct the infinite type: r2 ~ r2 -> r1
    • In the first argument of ‘x’, namely ‘x’
      In the expression: x x
    • Relevant bindings include
        x :: r2 -> r1 (bound at T7734.hs:5:5)
        (&) :: (r2 -> r1) -> r -> r1 (bound at T7734.hs:5:1)
